# binaryen

./: CMakeLists.txt  README.md  a.wat  auto_update_tests.py
.github/workflows/: ci.yml  create_release.yml
scripts/: fuzz_loop.js  fuzz_opt.py  fuzz_shell.js  gen-exprs.py
src/: binaryen-c.cpp  binaryen-c.h  literal.h  mixed_arena.h  pass.h  wasm-binary.h  wasm-builder.h  wasm-debug.h  wasm-delegations-fields.h  wasm-delegations.generated.h  wasm-expressions.generated.h  wasm-interpreter.h  wasm-s-parser.h  wasm-stack.h  wasm-traversal.h  wasm-type.h  wasm-visitors.generated.h  wasm-walking.generated.h  wasm.h
src/cfg/: cfg-traversal.h
src/ir/: ExpressionAnalyzer.cpp  ExpressionManipulator.cpp  LocalGraph.cpp  LocalStructuralDominance.cpp  compare-expressions.generated.h  cost.h  effects.h  expression-copying.generated.h  hash-expressions.generated.h  local-graph.h  localize.h  memory-utils.cpp  module-splitting.cpp  module-utils.h  properties.h  subtypes.h  supertypes.h  utils.h
src/js/: binaryen.js-post.js
src/tools/: CMakeLists.txt  execution-results.h  fuzzing.h  js-wrapper.h  spec-wrapper.h  wasm-ctor-eval.cpp  wasm-emscripten-finalize.cpp  wasm-metadce.cpp  wasm-reduce.cpp
src/tools/fuzzing/: CMakeLists.txt  fuzzing.cpp
test/: gc.wast  gc.wast.from-wast  gc.wast.fromBinary  gc.wast.fromBinary.noDebugInfo  heap-types.wast  heap-types.wast.from-wast  heap-types.wast.fromBinary  heap-types.wast.fromBinary.noDebugInfo  typed-function-references.wast.from-wast  typed-function-references.wast.fromBinary  typed-function-references.wast.fromBinary.noDebugInfo
(+137 files in other folders)
